--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="header">
-    <a href="https://www.iniad.org"><img src="http://moocs-files.iniad.org/2018/CS2/web/iniad.png" alt="INIADのロゴです"></a>
+    <a href="https://www.iniad.org"><img src="http://moocs-files.iniad.org/2018/CS2/web/iniad.png" alt="INIADのロゴですtest"></a>
   </div>
   <div id="container">
     <h1>INIAD天気予報</h1>
