--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <a href="https://www.iniad.org"><img src="http://moocs-files.iniad.org/2018/CS2/web/iniad.png" alt="INIADのロゴですtest"></a>
   </div>
   <div id="container">
-    <h1>INIAD天気予報</h1>
+    <h1><strong>INIAD天気予報</strong></h1>
     <form method="post" action="/">
       <p>
         <input id="input-keyword" type="text" value="東京都北区赤羽台">
