--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>INIAD天気予報</title>
-    <link rel="stylesheet" type="text/css" href="css/weather.css">
+    <link rel="stylesheet" type="text/css" href="static/weather.css">
   </head>
   <body>
     <h1>INIAD天気予報</h1>
