ヘッダ、フッタ

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="static/weather.css">
   </head>
   <body>
+    <div id="header">
+      <a href="https://www.iniad.org"><img src="http://moocs-files.iniad.org/2018/cs2/web/iniad.png" alt="INIADのロゴです"></a>
+    </div>
+    <div id="container">
     <h1>INIAD天気予報</h1>
     <form method="post" action="/">
       <p>
@@ -67,5 +71,9 @@
         <td>74</td>
       </tr>
     </table>
+  </div>
+  <div id="footer">
+    <a herf="https://www.iniad.org">INIAD</a>
+  </div>
   </body>
 </html>
