リンクの修正

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="header">
-      <a href="https://www.iniad.org"><img src="http://moocs-files.iniad.org/2018/cs2/web/iniad.png" alt="INIADのロゴです"></a>
+      <a href="https://www.iniad.org"><img src="http://moocs-files.iniad.org/2018/CS2/web/iniad.png" alt="INIADのロゴです"></a>
     </div>
     <div id="container">
     <h1>INIAD天気予報</h1>
