タイトル変更

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
       <a href="https://www.iniad.org"><img src="http://moocs-files.iniad.org/2018/CS2/web/iniad.png" alt="INIADのロゴです"></a>
     </div>
     <div id="container">
-    <h1>INIAD天気予報</h1>
+    <h1>JSコミュニケーションプラットフォーム</h1>
     <form method="post" action="/">
       <p>
         <input type="text" value="東京都北区赤羽台">
