--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
     </table>
   </div>
   <div id="footer">
-    <a herf="https://www.iniad.org">INIAD</a>
+    <a herf="https://www.js-net.co.jp/">JS</a>
   </div>
   </body>
 </html>
