ロゴの編集

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="header">
-      <a href="https://www.js-net.co.jp/"><img src="http://moocs-files.iniad.org/2018/CS2/web/iniad.png" alt="INIADのロゴです"></a>
+      <a href="https://www.js-net.co.jp/"><img src="image/logo_js.svg" alt="INIADのロゴです"></a>
     </div>
     <div id="container">
     <h1>JSコミュニケーションプラットフォーム</h1>
