ヘッダの編集

--- a/static/weather.css
+++ b/static/weather.css
@@ -53,7 +53,7 @@ td {
 }
 
 #header {
-  background-color : #17194c;
+  background-color : #ffffff;
   padding : 10px 20px 10px 20px;
   height : 40px;
 }
@@ -68,7 +68,7 @@ td {
 
 #footer {
   color : #ffffff;
-  background-color : #17194c;
+  background-color : #49b958;
   text-align : center; 
 }
 
