--- a/templates/index.html
+++ b/templates/index.html
@@ -1,79 +1,132 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="jp">
   <head>
     <meta charset="utf-8">
-    <title>INIAD天気予報</title>
-    <link rel="stylesheet" type="text/css" href="static/weather.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <title>JS コミュニケーションプラットフォーム</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
   </head>
+
   <body>
-    <div id="header">
-      <a href="https://www.js-net.co.jp/"><img src="image/logo_js.svg" alt="INIADのロゴです"></a>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm bg-success fixed-top">
+      <h5 class="my-0 mr-md-auto font-weight-normal">JS</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="#">Features</a>
+        <a class="p-2 text-dark" href="#">Enterprise</a>
+        <a class="p-2 text-dark" href="#">Support</a>
+      </nav>
+      <a class="btn btn-outline-warning" href="#">Sign up</a>
     </div>
-    <div id="container">
-    <h1>JSコミュニケーションプラットフォーム</h1>
-    <form method="post" action="/">
-      <p>
-        <input type="text" value="東京都北区赤羽台">
-        <input type="submit" value="検索">
-      </p>
-    </form>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center m-5">
+      <h1 class="display-3">コミュニケーションプラットフォーム</h1>
+      <h2 class="display-4">J Smart ~for all JS members~</h2>
+      <p class="lead">このサイトは団地に関わる全ての人々が、互いに情報発信できることを目的としています</p>
+    </div>
 
-    <h2>東京都北区赤羽台</h2>
-    <ul>
-      <li>緯度 : 35</li>
-      <li>経度 : 139</li>
-    </ul>
-    
-    <p>東京都北区赤羽台の天気予報は、以下のとおりです。</p>
-    
-    <table>
-      <tr>
-        <th>日時</th>
-        <th>天気</th>
-        <th>気温</th>
-        <th>気圧</th>
-        <th>湿度</th>
-      </tr>
+    <div class="container">
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header bg-success">
+            <h3 class="my-0 font-weight-normal text-white">イベントの開催</h3>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">イベントの概要</h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>日時：</li>
+              <li>場所：</li>
+              <li>hoge</li>
+              <li>hoge</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+          </div>
+        </div>
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header bg-success">
+            <h3 class="my-0 font-weight-normal text-white">イベントの開催</h3>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">イベントの概要</h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>日時：</li>
+              <li>場所：</li>
+              <li>hoge</li>
+              <li>hoge</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+          </div>
+        </div>
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header bg-success">
+            <h3 class="my-0 font-weight-normal text-white">イベントの開催</h3>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">イベントの概要</h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>日時：</li>
+              <li>場所：</li>
+              <li>hoge</li>
+              <li>hoge</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+          </div>
+        </div>
+      </div>
+  
+      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-12 col-md">
+            <img class="mb-2" src="https://getbootstrap.com/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
+            
+            <small class="d-block mb-3 text-muted">&copy; 2017-2019</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Features</h5>
+            
+            <ul class="list-unstyled">
+              <li><a class="text-muted" href="#">Cool stuff</a></li>
+              <li><a class="text-muted" href="#">Random feature</a></li>
+              <li><a class="text-muted" href="#">Team feature</a></li>
+              <li><a class="text-muted" href="#">Stuff for developers</a></li>
+              <li><a class="text-muted" href="#">Another one</a></li>
+              <li><a class="text-muted" href="#">Last time</a></li>
+            </ul>
+            
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            
+            <ul class="list-unstyled">
+              <li><a class="text-muted" href="#">Resource</a></li>
+              <li><a class="text-muted" href="#">Resource name</a></li>
+              <li><a class="text-muted" href="#">Another resource</a></li>
+              <li><a class="text-muted" href="#">Final resource</a></li>
+            </ul>
+            
+          </div>
+          <div class="col-6 col-md">
+            <h5>About</h5>
+            
+            <ul class="list-unstyled">
+              <li><a class="text-muted" href="#">Team</a></li>
+              <li><a class="text-muted" href="#">Locations</a></li>
+              <li><a class="text-muted" href="#">Privacy</a></li>
+              <li><a class="text-muted" href="#">Terms</a></li>
+            </ul>
+            
+          </div>
+        </div>
+      </footer>
+    </div>
 
-      <tr>
-        <td>2020-06-08 00:00</td>
-        <td>Clouds</td>
-        <td>20</td>
-        <td>1000</td>
-        <td>74</td>
-      </tr>
-      <tr>
-        <td>2020-06-08 03:00</td>
-        <td>Clouds</td>
-        <td>20</td>
-        <td>1000</td>
-        <td>74</td>
-      </tr>
-      <tr>
-        <td>2020-06-08 03:00</td>
-        <td>Clouds</td>
-        <td>20</td>
-        <td>1000</td>
-        <td>74</td>
-      </tr>
-      <tr>
-        <td>2020-06-08 03:00</td>
-        <td>Clouds</td>
-        <td>20</td>
-        <td>1000</td>
-        <td>74</td>
-      </tr>
-      <tr>
-        <td>2020-06-08 12:00</td>
-        <td>Clouds</td>
-        <td>20</td>
-        <td>1000</td>
-        <td>74</td>
-      </tr>
-    </table>
-  </div>
-  <div id="footer">
-    <a herf="https://www.js-net.co.jp/">JS</a>
-  </div>
   </body>
 </html>
