カードの追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,52 +35,132 @@
 
     <div class="container">
       <div class="card-deck mb-3 text-center">
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-5 shadow-sm">
           <div class="card-header bg-success">
-            <h3 class="my-0 font-weight-normal text-white">イベントの開催</h3>
+            <h3 class="my-0 font-weight-normal text-white">各種申請</h3>
           </div>
           <div class="card-body">
-            <h4 class="card-title">イベントの概要</h4>
+            <h4 class="card-title">概要</h4>
             <ul class="list-unstyled mt-3 mb-4">
               <li>日時：</li>
               <li>場所：</li>
-              <li>hoge</li>
-              <li>hoge</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
           </div>
         </div>
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-5 shadow-sm">
           <div class="card-header bg-success">
-            <h3 class="my-0 font-weight-normal text-white">イベントの開催</h3>
+            <h3 class="my-0 font-weight-normal text-white">地域情報</h3>
           </div>
           <div class="card-body">
-            <h4 class="card-title">イベントの概要</h4>
+            <h4 class="card-title">概要</h4>
             <ul class="list-unstyled mt-3 mb-4">
               <li>日時：</li>
               <li>場所：</li>
-              <li>hoge</li>
-              <li>hoge</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
           </div>
         </div>
-        <div class="card mb-4 shadow-sm">
+        <div class="card mb-5 shadow-sm">
           <div class="card-header bg-success">
-            <h3 class="my-0 font-weight-normal text-white">イベントの開催</h3>
+            <h3 class="my-0 font-weight-normal text-white">窓口からの情報</h3>
           </div>
           <div class="card-body">
-            <h4 class="card-title">イベントの概要</h4>
+            <h4 class="card-title">概要</h4>
             <ul class="list-unstyled mt-3 mb-4">
               <li>日時：</li>
               <li>場所：</li>
-              <li>hoge</li>
-              <li>hoge</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
           </div>
         </div>
       </div>
+
+      <div class="container">
+        <div class="card-deck mb-3 text-center">
+          <div class="card mb-5 shadow-sm">
+            <div class="card-header bg-success">
+              <h3 class="my-0 font-weight-normal text-white">工事情報</h3>
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">概要</h4>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>日時：</li>
+                <li>場所：</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+            </div>
+          </div>
+          <div class="card mb-5 shadow-sm">
+            <div class="card-header bg-success">
+              <h3 class="my-0 font-weight-normal text-white">イベント情報</h3>
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">概要</h4>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>日時：</li>
+                <li>場所：</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+            </div>
+          </div>
+          <div class="card mb-5 shadow-sm">
+            <div class="card-header bg-success">
+              <h3 class="my-0 font-weight-normal text-white">店舗情報</h3>
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">概要</h4>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>日時：</li>
+                <li>場所：</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="card-deck mb-3 text-center">
+            <div class="card mb-5 shadow-sm">
+              <div class="card-header bg-success">
+                <h3 class="my-0 font-weight-normal text-white">天気情報</h3>
+              </div>
+              <div class="card-body">
+                <h4 class="card-title">天気、交通</h4>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>日時：</li>
+                  <li>場所：</li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+              </div>
+            </div>
+            <div class="card mb-5 shadow-sm">
+              <div class="card-header bg-success">
+                <h3 class="my-0 font-weight-normal text-white">交通情報</h3>
+              </div>
+              <div class="card-body">
+                <h4 class="card-title">概要</h4>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>日時：</li>
+                  <li>場所：</li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+              </div>
+            </div>
+            <div class="card mb-5 shadow-sm">
+              <div class="card-header bg-success">
+                <h3 class="my-0 font-weight-normal text-white">行政情報</h3>
+              </div>
+              <div class="card-body">
+                <h4 class="card-title">概要</h4>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>日時：</li>
+                  <li>場所：</li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+              </div>
+            </div>
+          </div>
   
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
