--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,9 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm bg-success fixed-top">
       <h5 class="my-0 mr-md-auto font-weight-normal">JS</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">Features</a>
-        <a class="p-2 text-dark" href="#">Enterprise</a>
-        <a class="p-2 text-dark" href="#">Support</a>
+        <a class="p-2 text-dark" href="#">About us</a>
+        <a class="p-2 text-dark" href="#">緊急事故受付</a>
+        <a class="p-2 text-dark" href="#">問い合わせ</a>
       </nav>
       <a class="btn btn-outline-warning" href="#">Sign up</a>
     </div>
