ナビゲーションバーのリンク化

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm bg-success fixed-top">
-      <h5 class="my-0 mr-md-auto font-weight-normal">JS</h5>
+      <h5 class="my-0 mr-md-auto font-weight-normal"><a href="https://www.js-net.co.jp/">JS 日本総合住生活</a></h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">About us</a>
-        <a class="p-2 text-dark" href="#">緊急事故受付</a>
-        <a class="p-2 text-dark" href="#">問い合わせ</a>
+        <a class="p-2 text-dark" href="https://www.js-net.co.jp/business/">About us</a>
+        <a class="p-2 text-dark" href="https://www.js-net.co.jp/contact/emergency.html">緊急事故受付</a>
+        <a class="p-2 text-dark" href="https://www.js-net.co.jp/contact/">問い合わせ</a>
       </nav>
       <a class="btn btn-outline-warning" href="#">Sign up</a>
     </div>
