--- a/templates/index.html
+++ b/templates/index.html
@@ -18,19 +18,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm bg-success fixed-top">
-      <h5 class="my-0 mr-md-auto font-weight-normal"><a href="https://www.js-net.co.jp/">JS 日本総合住生活</a></h5>
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm bg-white fixed-top">
+      <h5 class="my-0 mr-md-auto font-weight-normal"><a href="https://www.js-net.co.jp/"><img src="image/logo_js.svg" alt=""></a></h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="https://www.js-net.co.jp/business/">About us</a>
-        <a class="p-2 text-dark" href="https://www.js-net.co.jp/contact/emergency.html">緊急事故受付</a>
-        <a class="p-2 text-dark" href="https://www.js-net.co.jp/contact/">問い合わせ</a>
+        <a class="p-2 text-success" href="https://www.js-net.co.jp/business/">About us</a>
+        <a class="p-2 text-success" href="https://www.js-net.co.jp/contact/emergency.html">緊急事故受付</a>
+        <a class="p-2 text-success" href="https://www.js-net.co.jp/contact/">問い合わせ</a>
       </nav>
-      <a class="btn btn-outline-warning" href="#">Sign up</a>
+      <a class="btn btn-outline-success" href="#">Sign up</a>
     </div>
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center m-5">
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center m-5 p-5">
       <h1 class="display-3">コミュニケーションプラットフォーム</h1>
-      <h2 class="display-4">J Smart ~for all JS members~</h2>
-      <p class="lead">このサイトは団地に関わる全ての人々が、互いに情報発信できることを目的としています</p>
+      <h2 class="lead">このサイトは団地に関わる全ての人々が、互いに情報発信できることを目的としています</h2>
     </div>
 
     <div class="container">
