--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,11 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm bg-white fixed-top">
       <h5 class="my-0 mr-md-auto font-weight-normal"><a href="https://www.js-net.co.jp/"><img src="image/logo_js.svg" alt=""></a></h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-success" href="https://www.js-net.co.jp/business/">About us</a>
+        <a class="p-2 text-success" href="https://www.js-net.co.jp/business/">About "JS"</a>
         <a class="p-2 text-success" href="https://www.js-net.co.jp/contact/emergency.html">緊急事故受付</a>
         <a class="p-2 text-success" href="https://www.js-net.co.jp/contact/">問い合わせ</a>
       </nav>
-      <a class="btn btn-outline-success" href="#">Sign up</a>
+      <button type="button" class="btn btn-success">Sign up</button>
     </div>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center m-5 p-5">
       <h1 class="display-3">コミュニケーションプラットフォーム</h1>
