背景の編集

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,9 @@ html {
   }
 }
 
+body {
+  background-image: url("image/A00004865.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
