--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <title>JS コミュニケーションプラットフォーム</title>
+    <title>JS Communication Platform</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,7 +13,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body> 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
       <button type="button" class="btn btn-success">Sign up</button>
     </div>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center m-5 p-5">
-      <h1 class="display-3">コミュニケーションプラットフォーム</h1>
+      <h1 class="display-3">JS Communication Platform</h1>
       <h2 class="lead">このサイトは団地に関わる全ての人々が、互いに情報発信できることを目的としています</h2>
     </div>
 
@@ -41,8 +41,8 @@
           <div class="card-body">
             <h4 class="card-title">概要</h4>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>日時：</li>
-              <li>場所：</li>
+              <li>項目</li>
+              <li>説明</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
           </div>
@@ -54,8 +54,8 @@
           <div class="card-body">
             <h4 class="card-title">概要</h4>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>日時：</li>
-              <li>場所：</li>
+              <li>項目</li>
+              <li>説明</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
           </div>
@@ -67,8 +67,8 @@
           <div class="card-body">
             <h4 class="card-title">概要</h4>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>日時：</li>
-              <li>場所：</li>
+              <li>項目</li>
+              <li>説明</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
           </div>
@@ -84,8 +84,8 @@
             <div class="card-body">
               <h4 class="card-title">概要</h4>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>日時：</li>
-                <li>場所：</li>
+                <li>項目</li>
+                <li>説明</li>
               </ul>
               <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
             </div>
@@ -97,21 +97,21 @@
             <div class="card-body">
               <h4 class="card-title">概要</h4>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>日時：</li>
-                <li>場所：</li>
+                <li>項目</li>
+                <li>説明</li>
               </ul>
               <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
             </div>
           </div>
           <div class="card mb-5 shadow-sm">
             <div class="card-header bg-success">
-              <h3 class="my-0 font-weight-normal text-white">店舗情報</h3>
+              <h3 class="my-0 font-weight-normal text-white">生活サポート情報</h3>
             </div>
             <div class="card-body">
               <h4 class="card-title">概要</h4>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>日時：</li>
-                <li>場所：</li>
+                <li>項目</li>
+                <li>説明</li>
               </ul>
               <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
             </div>
@@ -127,8 +127,8 @@
               <div class="card-body">
                 <h4 class="card-title">天気、交通</h4>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>日時：</li>
-                  <li>場所：</li>
+                  <li>項目</li>
+                  <li>説明</li>
                 </ul>
                 <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
               </div>
@@ -140,8 +140,8 @@
               <div class="card-body">
                 <h4 class="card-title">概要</h4>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>日時：</li>
-                  <li>場所：</li>
+                  <li>項目</li>
+                  <li>説明</li>
                 </ul>
                 <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
               </div>
@@ -153,8 +153,8 @@
               <div class="card-body">
                 <h4 class="card-title">概要</h4>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>日時：</li>
-                  <li>場所：</li>
+                  <li>項目</li>
+                  <li>説明</li>
                 </ul>
                 <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
               </div>
