--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,29 @@ html {
   }
 }
 
-body {
-  background-image: url("image/A00004865.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+/*背景画像の設定をする*/
+.bgImage{
+  background: url("https://chintai.sumai.ur-net.go.jp/chintai/img_photo/20/20_694/A00004865.jpg") no-repeat center;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;/*ブラー効果でボヤけた部分を非表示*/
 }
 
+/*:beforeにぼかし効果を設定する*/
+.bgImage:before{
+  content: '';
+  background: inherit;/*.bgImageで設定した背景画像を継承する*/
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  position: absolute;
+  /*ブラー効果で画像の端がボヤけた分だけ位置を調整*/
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;/*重なり順序を一番下にしておく*/
+}
