--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body> 
@@ -22,15 +22,61 @@
       <h5 class="my-0 mr-md-auto font-weight-normal"><a href="https://www.js-net.co.jp/"><img src="image/logo_js.svg" alt=""></a></h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-success" href="https://www.js-net.co.jp/business/">About "JS"</a>
-        <a class="p-2 text-success" href="https://www.js-net.co.jp/contact/emergency.html">緊急事故受付</a>
         <a class="p-2 text-success" href="https://www.js-net.co.jp/contact/">問い合わせ</a>
+        <a class="p-2 text-dark"><strong>システムデモ</strong> 様</a>
+
       </nav>
-      <button type="button" class="btn btn-success">Sign up</button>
+      <button type="button" class="btn btn-success">Sign out</button>
     </div>
+    
+    <div class="bgImage">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center m-5 p-5">
-      <h1 class="display-3">JS Communication Platform</h1>
-      <h2 class="lead">このサイトは団地に関わる全ての人々が、互いに情報発信できることを目的としています</h2>
+      <h1 class="display-3 text-white bg-success">JS Communication Platform</h1>
+      <h2 class="lead text">団地に関わる全ての人々が、互いに情報発信できることを目的としたポータルサイトです。</h2>
     </div>
+  
+    <div class="container">
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-5 shadow-sm">
+          <div class="card-header bg-success">
+            <h3 class="my-0 font-weight-normal text-white">コンセプト</h3>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">双方向型</h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>情報閲覧と情報発信</li>
+              <li>全ての情報を集約</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+          </div>
+        </div>
+        <div class="card mb-5 shadow-sm">
+          <div class="card-header bg-success">
+            <h3 class="my-0 font-weight-normal text-white">デザイン</h3>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">わかりやすい見た目</h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>直感的なカード表示</li>
+              <li>明るい色使い</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+          </div>
+        </div>
+        <div class="card mb-5 shadow-sm">
+          <div class="card-header bg-success">
+            <h3 class="my-0 font-weight-normal text-white">仕様</h3>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">HTML, CSS</h4>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>bootstrap</li>
+              <li>画面サイズに合わせて最適化</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-success">Read more</button>
+          </div>
+        </div>
+      </div>
 
     <div class="container">
       <div class="card-deck mb-3 text-center">
@@ -49,7 +95,7 @@
         </div>
         <div class="card mb-5 shadow-sm">
           <div class="card-header bg-success">
-            <h3 class="my-0 font-weight-normal text-white">地域情報</h3>
+            <h3 class="my-0 font-weight-normal text-white">住生活サポート</h3>
           </div>
           <div class="card-body">
             <h4 class="card-title">概要</h4>
@@ -62,7 +108,7 @@
         </div>
         <div class="card mb-5 shadow-sm">
           <div class="card-header bg-success">
-            <h3 class="my-0 font-weight-normal text-white">窓口からの情報</h3>
+            <h3 class="my-0 font-weight-normal text-white">窓口からのお知らせ</h3>
           </div>
           <div class="card-body">
             <h4 class="card-title">概要</h4>
@@ -79,7 +125,7 @@
         <div class="card-deck mb-3 text-center">
           <div class="card mb-5 shadow-sm">
             <div class="card-header bg-success">
-              <h3 class="my-0 font-weight-normal text-white">工事情報</h3>
+              <h3 class="my-0 font-weight-normal text-white">工事</h3>
             </div>
             <div class="card-body">
               <h4 class="card-title">概要</h4>
@@ -92,7 +138,7 @@
           </div>
           <div class="card mb-5 shadow-sm">
             <div class="card-header bg-success">
-              <h3 class="my-0 font-weight-normal text-white">イベント情報</h3>
+              <h3 class="my-0 font-weight-normal text-white">イベント</h3>
             </div>
             <div class="card-body">
               <h4 class="card-title">概要</h4>
@@ -105,7 +151,7 @@
           </div>
           <div class="card mb-5 shadow-sm">
             <div class="card-header bg-success">
-              <h3 class="my-0 font-weight-normal text-white">生活サポート情報</h3>
+              <h3 class="my-0 font-weight-normal text-white">緊急事故受付</h3>
             </div>
             <div class="card-body">
               <h4 class="card-title">概要</h4>
@@ -122,7 +168,7 @@
           <div class="card-deck mb-3 text-center">
             <div class="card mb-5 shadow-sm">
               <div class="card-header bg-success">
-                <h3 class="my-0 font-weight-normal text-white">天気情報</h3>
+                <h3 class="my-0 font-weight-normal text-white">一般</h3>
               </div>
               <div class="card-body">
                 <h4 class="card-title">天気、交通</h4>
@@ -135,7 +181,7 @@
             </div>
             <div class="card mb-5 shadow-sm">
               <div class="card-header bg-success">
-                <h3 class="my-0 font-weight-normal text-white">交通情報</h3>
+                <h3 class="my-0 font-weight-normal text-white">地域</h3>
               </div>
               <div class="card-body">
                 <h4 class="card-title">概要</h4>
@@ -148,7 +194,7 @@
             </div>
             <div class="card mb-5 shadow-sm">
               <div class="card-header bg-success">
-                <h3 class="my-0 font-weight-normal text-white">行政情報</h3>
+                <h3 class="my-0 font-weight-normal text-white">行政</h3>
               </div>
               <div class="card-body">
                 <h4 class="card-title">概要</h4>
@@ -160,11 +206,11 @@
               </div>
             </div>
           </div>
-  
+        </div>
+  </div>
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
           <div class="col-12 col-md">
-            <img class="mb-2" src="https://getbootstrap.com/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
             <small class="d-block mb-3 text-muted">&copy; 2017-2019</small>
           </div>
           <div class="col-6 col-md">
@@ -196,7 +242,6 @@
               <li><a class="text-muted" href="#">Terms</a></li>
             </ul>
           </div>
-        </div>
       </footer>
     </div>
 
